fluxcd/apps/base/hatsh/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: hatsh
  annotations:
    linkerd.io/inject: enabled
