fluxcd/apps/base/hatsh/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hatsh
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hatsh
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 80
      protocol: TCP
